# cme241-rl-discounts

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
configs/: agent_config.yaml
configs/data/: calibration.yaml
configs/dp/: solver.yaml
configs/rl/: agent.yaml  env.yaml
notebooks/: 01_data_analysis.ipynb  02_dp_solution.ipynb  03_rl_results.ipynb  04_calibration_walkthrough.ipynb  04_rl_other_categories.ipynb  05_rl_walkthrough.ipynb  06_rl_other_categories.ipynb  07_rl_walkthrough_v2.ipynb  08_rl_dp_comparison.ipynb  dp_walkthrough.ipynb
scripts/: dp_evaluate.py  dp_solve.py  dp_validate.py  evaluate.py  preprocess_data.py  rl_evaluate.py  rl_run_simulation.py  rl_train.py  solve_dp.py  train_rl.py
scripts/data/: calibrate_mdp_params.py  download_dataset.py  preprocess_data.py
specs/: 00_repo_map.md  01_project_core.md  02_roadmap.md  03_memory.md  04_alpha_experiments.md  active_brief.md  project_guidelines.md  repo_structure.md
src/discount_engine/: __init__.py
src/discount_engine/agents/: __init__.py  base.py  dp_agent.py  q_learning.py
submissions/: phase1.ipynb  phase2.ipynb  phase3.ipynb
tests/: __init__.py  conftest.py
tests/core/: test_calibration.py  test_calibration_logistic.py  test_calibration_weekly.py  test_demand.py  test_dynamics.py  test_io.py  test_params.py  test_phase0_contract.py
tests/dp/: test_dp_bellman_backup.py  test_dp_phase1_exit.py  test_dp_policy_sanity.py  test_dp_quality_checks.py  test_dp_regression.py  test_dp_script_e2e.py  test_dp_terminal.py  test_dp_transitions.py  test_dp_value_iteration.py
tests/fixtures/: dp_params_small.yaml
tests/meta/: __init__.py  test_structure.py
tests/rl/: conftest.py  test_rl_agent.py  test_rl_env.py  test_rl_evaluate.py  test_rl_replay.py  test_rl_rollout.py  test_rl_train.py
tests/unit/: __init__.py  test_agent.py  test_data_loader.py  test_elasticity.py  test_env.py  test_feature_engineering.py  test_sequence_builder.py
(+37 files in other folders)
